--- a/vivino.ipynb
+++ b/vivino.ipynb
@@ -9,17 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
+    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier, VotingClassifier, BaggingClassifier, AdaBoostClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LinearRegression, ElasticNet"
    ]
   },
   {
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,12 +82,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Development"
+    "# Model Development - Classification models\n",
+    "In theory, you could cluster the data to better predict it due to the fact that there are multiple factors that make up the quality of the wine. Tbis may be easily described through a forest or a decision tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +97,7 @@
        "1.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +120,7 @@
        "1.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,39 +134,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9874902267396404"
+       "0.982017200938233"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bagg_clf = BaggingClassifier()\n",
-    "bagg_clf.fit(X_train,y_train)\n",
+    "bag = bagg_clf.fit(X_train,y_train)\n",
     "bagg_clf.score(X_train,y_train)\n",
     "#Sweet - this is a good model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.563721657544957"
+       "0.5527756059421423"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6966379984362784"
+       "0.7028928850664582"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +212,7 @@
        "0.5957779515246286"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,16 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8858483189992181"
+       "0.8717748240813136"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +258,7 @@
        "1.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,6 +268,42 @@
     "vote_clf.fit(X_train,y_train)\n",
     "vote_clf.score(X_train,y_train)\n",
     "# Still overfitting..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_importances = np.mean([\n",
+    "    tree.feature_importances_ for tree in bagg_clf.estimators_\n",
+    "], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.08504467, 0.10342894, 0.0677458 , 0.07124033, 0.07510161,\n",
+       "       0.05368326, 0.09642202, 0.07879119, 0.07446533, 0.11048265,\n",
+       "       0.1835942 ])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_importances\n",
+    "\n",
+    "#Appears as though the important features in this model are the volatile acididty in a bottle of wine along with the alcohol percentage and \n",
+    "#sulphate content. These three items are the greatest determinents in whehther or not a bottle of wine is seen as a good bottle. (2,10,11)"
    ]
   },
   {
